--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "dayjs": "^1.10.6",
     "html-react-parser": "^1.2.8",
     "immer": "^9.0.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-date-picker": "^8.3.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "sass": "^1.38.1",
