--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "dayjs": "^1.10.6",
+    "express": "^4.17.1",
     "html-react-parser": "^1.2.8",
     "immer": "^9.0.5",
     "prop-types": "^15.7.2",
