--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "express": "^4.17.1",
     "html-react-parser": "^1.2.8",
     "immer": "^9.0.5",
+    "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-date-picker": "^8.3.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-saga": "^1.1.3",
+    "redux-toolkit": "^1.1.2",
     "sass": "^1.38.1",
     "uuid": "^8.3.2",
     "weak-key": "^1.0.2",
