--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "html-react-parser": "^1.2.8",
     "immer": "^9.0.5",
+    "json-server": "^0.16.3",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
