updated urls api

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT=3001
 REACT_APP_BASE_URL=http://localhost/admin
-REACT_APP_LOCALHOST=http://localhost:3002
+REACT_APP_LOCALHOST=http://localhost/admin
+REACT_APP_LOCALHOSTT=http://localhost:3002
 REACT_APP_HOST=http://localhost
 
 SKIP_PREFLIGHT_CHECK=true
