--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clsx": "^1.1.1",
     "dayjs": "^1.10.6",
     "express": "^4.17.1",
+    "file-saver": "^2.0.5",
     "html-react-parser": "^1.2.8",
     "immer": "^9.0.5",
     "json-server": "^0.16.3",
