--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "file-saver": "^2.0.5",
     "html-react-parser": "^1.2.8",
+    "html-to-image": "^1.8.5",
     "immer": "^9.0.5",
     "json-server": "^0.16.3",
     "lodash": "^4.17.21",
