--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "dayjs": "^1.10.6",
+    "dom-to-image": "^2.6.0",
     "express": "^4.17.1",
     "file-saver": "^2.0.5",
     "html-react-parser": "^1.2.8",
