--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-date-picker": "^8.3.2",
     "react-dom": "^17.0.2",
+    "react-qr-code": "^2.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
