--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3001
-REACT_APP_BASE_URL=http://localhost/admin
-REACT_APP_LOCALHOST=http://localhost/admin
+REACT_APP_BASE_URL=http://localhost
+REACT_APP_LOCALHOST=http://localhost
 REACT_APP_LOCALHOSTT=http://localhost:3002
 REACT_APP_HOST=http://localhost
 
