--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3001
-REACT_APP_BASE_URL=http://localhost
+REACT_APP_BASE_URL=http://localhost:3002
 REACT_APP_LOCALHOST=http://localhost:3002
 REACT_APP_LOCALHOST=http://localhost:3002
 REACT_APP_HOST=http://localhost
